--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,10 @@
-flutter/.dart_tool/
-flutter/.packages
-flutter/.flutter-plugins
-flutter/.flutter-plugins-dependencies
-flutter/.metadata
-flutter/.idea/
-flutter/.vscode/
-flutter/.DS_Store
-flutter/.pub-cache/
-flutter/.pub-cache.lock
-flutter/.pub/
-.DS_Store
+.dart_tool/
 .idea/
 .vscode/
-flutter/build/.DS_Store
-flutter/assets/.DS_Store
+.DS_Store
+build/.DS_Store
+assets/.DS_Store
+
+// Firebase configuration files
+lib/firebase_options.dart
+firebase.json
