--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,13 +34,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  
   auto_size_text: ^3.0.0
   carousel_slider: ^5.0.0
+  firebase_core: ^3.15.2
   font_awesome_flutter: ^10.8.0
   flutter_markdown: ^0.7.7
-  smooth_page_indicator: ^1.2.1
+  flutter_bloc: ^9.1.1
   intl: ^0.20.2
   go_router: ^15.1.1
+  smooth_page_indicator: ^1.2.1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
@@ -66,6 +70,7 @@ flutter:
 
   # To add images to your application, add an images section, like this:
   assets:
+    - assets/files/
     - assets/icons/
     - assets/images/
 
