--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.1+2
+version: 1.0.2+3
 
 environment:
   sdk: ">=3.6.0 <4.0.0"
@@ -37,7 +37,10 @@ dependencies:
   
   auto_size_text: ^3.0.0
   carousel_slider: ^5.0.0
+  equatable: ^2.0.7
   firebase_core: ^3.15.2
+  firebase_analytics: ^11.6.0
+  firebase_crashlytics: ^4.3.10
   font_awesome_flutter: ^10.8.0
   flutter_markdown: ^0.7.7
   flutter_bloc: ^9.1.1
