--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ assets/.DS_Store
 .flutter-plugins-dependencies
 
 / Firebase configuration files
-.firebaserc
+#.firebaserc
 #lib/firebase_options.dart
-firebase.json
+#firebase.json
 firebase-debug.log
